[gd_scene load_steps=2 format=3 uid="uid://dfbup0hx5yqf0"]

[ext_resource type="Script" path="res://UIs/main_menu.gd" id="1_epe6e"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_epe6e")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
layout_mode = 0
offset_right = 1151.0
offset_bottom = 1149.0

[node name="Label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.5
offset_right = 123.5
offset_bottom = 52.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Choose a Class"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.5
offset_top = -244.0
offset_right = 368.5
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedBtn" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 56.0
offset_bottom = 27.0
grow_vertical = 2
text = "Speed
Class
"

[node name="StrengthBtn" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
text = "Strength
Class
"

[node name="BalancedBtn" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Balanced 
Class"

[node name="StartBtn" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "START"

[connection signal="button_down" from="Control/SpeedBtn" to="." method="_on_speed_btn_button_down"]
[connection signal="button_down" from="Control/StrengthBtn" to="." method="_on_strength_btn_button_down"]
[connection signal="button_down" from="Control/BalancedBtn" to="." method="_on_balanced_btn_button_down"]
[connection signal="button_down" from="Control/StartBtn" to="." method="_on_start_btn_button_down"]
